--- a/404.html
+++ b/404.html
@@ -301,7 +301,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-auto">
           <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2019</span>
+            <span>Copyright &copy; Felipe2019</span>
           </div>
         </div>
       </footer>
