--- a/login.html
+++ b/login.html
@@ -39,18 +39,16 @@
                   <div class="text-center">
                     <h1 class="h4 text-gray-900 mb-4">Bem-vindo(a)!</h1>
                   </div>
-                  <form class="user">
+                  <form action="validarLogin.php" method="GET" class="user">
                     <div class="form-group">
-                      <input type="email" name="email" class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Email...">
+                      <input type="text" name="nome" required class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Usuario...">
                     </div>
                     <div class="form-group">
-                      <input type="password" name="senha" class="form-control form-control-user" id="exampleInputPassword" placeholder="Senha">
+                      <input type="password" name="senha" required class="form-control form-control-user" id="exampleInputPassword" placeholder="Senha">
                     </div>
 
-                    <a href="index.html" class="btn btn-primary btn-user btn-block">
-                      Entrar
-                    </a>
-                    <hr>                   
+                    <center><button class="btn btn-outline-primary">Entrar</button></center>
+                    
                   </form>
                   <hr>
                   <div class="text-center">
