--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">Criar Conta!</h1>
               </div>
-              <form class="user" method="POST" action="inserirUsuario.php" >
+              <form class="user" method="GET" action="inserirUsuario.php" >
                 <div class="form-group">
                   <input type="text" class="form-control form-control-user" id="idprinome_login" 
                   name="nome" placeholder="Nome completo" required>
