--- a/login.html
+++ b/login.html
@@ -41,10 +41,10 @@
                   </div>
                   <form action="validarLogin.php" method="GET" class="user">
                     <div class="form-group">
-                      <input type="text" name="nome" required class="form-control form-control-user" id="exampleInputEmail" aria-describedby="emailHelp" placeholder="Usuario...">
+                      <input type="text" name="nome" required class="form-control form-control-user" aria-describedby="emailHelp" placeholder="Usuario...">
                     </div>
                     <div class="form-group">
-                      <input type="password" name="senha" required class="form-control form-control-user" id="exampleInputPassword" placeholder="Senha">
+                      <input type="password" name="senha" required class="form-control form-control-user" placeholder="Senha">
                     </div>
 
                     <center><button class="btn btn-outline-primary">Entrar</button></center>
