--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                       <input type="password" name="senha" required class="form-control form-control-user" placeholder="Senha">
                     </div>
 
-                    <center><button class="btn btn-outline-primary">Entrar</button></center>
+                    <button class="btn btn-outline-primary">Entrar</button>
                     
                   </form>
                   <hr>
