--- a/login.html
+++ b/login.html
@@ -47,7 +47,9 @@
                       <input type="password" name="senha" required class="form-control form-control-user" placeholder="Senha">
                     </div>
 
-                    <button class="btn btn-outline-primary">Entrar</button>
+                    
+
+                    <button style="margin: auto 25% auto 40%;" class="btn btn-outline-primary">Entrar</button>
                     
                   </form>
                   <hr>
