--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
                       <input type="text" name="nome" required class="form-control form-control-user" aria-describedby="emailHelp" placeholder="Usuario...">
                     </div>
                     <div class="form-group">
-                      <input type="password" name="senha" required class="form-control form-control-user" placeholder="Senha">
+                      <input type="password" name="senha" required class="form-control form-control-user" placeholder="Senha" min="6">
                     </div>
                     
                     <button style="margin: auto 25% auto 40%;" class="btn btn-outline-primary">Entrar</button>
