--- a/register.html
+++ b/register.html
@@ -46,11 +46,11 @@
                 <div class="form-group row">
                   <div class="col-sm-6 mb-3 mb-sm-0">
                     <input type="password" class="form-control form-control-user" id="idsenha_login" 
-                    name="senha" placeholder="Senha" required>
+                    name="senha" placeholder="Senha" min="6" required>
                   </div>
                   <div class="col-sm-6">
                     <input type="password" class="form-control form-control-user" id="idresenha_login" 
-                    name="re-senha" placeholder="Repita a senha" required>
+                    name="re-senha" placeholder="Repita a senha" min="6" required>
                   </div>
                 </div>
                 <button class="btn btn-primary btn-user btn-block">
